# agent-tool-index

./: .env.example  .gitignore  .vercelignore  Cargo.toml  README.md  vercel.json
.github/workflows/: ci.yml  sync.yml
api/: _lib.js  call.js  openapi.js  registry.json  resolve.js  stats.js  verify.js  verify.x402.test.js
api/tools/: [id].js  index.js
api/tools/[id]/: can_call.js
api/verify/: verify.test.js
api/verify/[chain_id]/: [tool_id].js
src/: cache.rs  events.rs  indexer.rs  main.rs  storage.rs  types.rs  verify.rs  web.rs
web/: cat-app.jsx  cat-card.jsx  cat-domains.jsx  cat-helpers.jsx  cat-run.jsx  con-helpers.jsx  index.html  llms.txt  registry-data.js  tweaks-panel.jsx  wallet.js
web/.well-known/ai-tool/: verify-tool.json
